# csp-atmospheres

./: CMakeLists.txt  README.md
gui/: atmospheres_settings.html
gui/js/: atmospheres_settings.js  csp-atmospheres.js
src/: Atmosphere.cpp  Atmosphere.hpp  AtmosphereRenderer.cpp  AtmosphereRenderer.hpp  Plugin.cpp  Plugin.hpp  Shaders.cpp  VistaAtmosphere.cpp  VistaAtmosphere.hpp  logger.cpp  logger.hpp
test/: atmosphere.cpp
